# server/docs/swagger.json
@@ -96,6 +96,38 @@
                 }
             }
         },
+        "/historyLinks": {
+            "get": {
+                "description": "Retrieve detailed historyLink records with related entities",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "HistoryLinks"
+                ],
+                "summary": "Get detailed historyLinks",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.HistoryLinkResponse"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/liquidityPoolHistories": {
             "get": {
                 "description": "Retrieve detailed liquidityPoolHistory records with related entities",
@@ -182,6 +214,38 @@
                     }
                 }
             }
+        },
+        "/liquidityPoolHistoryLinks": {
+            "get": {
+                "description": "Retrieve detailed liquidityPoolHistory records with related entities",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "LiquidityPoolHistoryLinks"
+                ],
+                "summary": "Get detailed liquidityPoolHistoryLinks",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.LiquidityPoolHistoryLinkResponse"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -189,6 +253,23 @@
             "type": "object",
             "properties": {
                 "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.HistoryLinkResponse": {
+            "type": "object",
+            "properties": {
+                "link": {
+                    "type": "string"
+                },
+                "operation": {
+                    "type": "string"
+                },
+                "provider": {
+                    "type": "string"
+                },
+                "token": {
                     "type": "string"
                 }
             }
@@ -212,6 +293,23 @@
                     "type": "string"
                 },
                 "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.LiquidityPoolHistoryLinkResponse": {
+            "type": "object",
+            "properties": {
+                "link": {
+                    "type": "string"
+                },
+                "provider": {
+                    "type": "string"
+                },
+                "token_a": {
+                    "type": "string"
+                },
+                "token_b": {
                     "type": "string"
                 }
             }
